# natural_gas_consumption_modelling

./: .gitignore  Dockerfile  Dockerfile_backend  README.md  cloudbuild.yaml  environment.yml  lstm_model.ckpt  pyproject.toml  requirements.txt
data/: regressors_combined_extract.json
data/raw/: Crude oil prices Brent - Europe.csv  European wholesale electricity prices.csv  GASPOOL imbalance prices.csv  NetConnect Germany imbalance prices.xml  StorageData_GIE_2011-01-01_2023-03-02.csv  Trading Hub Europe  Publications  Transparency  Aggregated consumption data.csv  Trading Hub Europe imbalance prices.csv
diagrams/: backend_architecture.drawio
models/: piecewise_linear_temperature_model.pkl  temperature_model.pkl
notebooks/data_analysis/: 001 Data loading module test.ipynb  002 Autocorrelation, seasonality and trends.ipynb  002 Temperature as a driver of natural gas consumption.ipynb  003 Temperature as a driver of natural gas consumption.ipynb  004 Impact of major events on natural gas prices.ipynb  005 Relationhip between consumption and pricing.ipynb  006 Correlation of energy commodity prices.ipynb  007 EUA and natural gas consumption relationship.ipynb
notebooks/data_overview/: 001 Historic daily mean temperature in Germany.ipynb  002 Historic natural gas imbalance prices.ipynb  003 Historic crude oild prices.ipynb  004 European wholesale electricity prices.ipynb  005 European Emission Allowance Auctions.ipynb  006 Natural gas storage levels in Germany.ipynb  (+2 more)
src/: app.py  consumption_forecast_pipeline.py  daily_model_run.py
src/models/: LSTM.py  (+4 more)
(+18 files in other folders)
